--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
